--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^1.35.3",
     "axios": "^0.27.2",
     "gray-matter": "^4.0.3",
     "next": "12.1.6",
