--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
     "@supabase/supabase-js": "^1.35.3",
+    "antd": "^4.20.6",
     "axios": "^0.27.2",
     "gray-matter": "^4.0.3",
     "next": "12.1.6",
