--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "antd": "^4.20.6",
     "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
+    "cookies-next": "^2.0.4",
+    "crypto": "^1.0.1",
     "gray-matter": "^4.0.3",
+    "jose": "^4.8.1",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0"
