--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "crypto": "^1.0.1",
     "gray-matter": "^4.0.3",
     "jose": "^4.8.1",
+    "jsonwebtoken": "^8.5.1",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0"
